Update Wicket-Scala LegUp